Fixed link overflow

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -174,6 +174,10 @@ iframe {
     font-size: 20px !important;
   }
   
+  .portfolioLink {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  }
   
   .aboutBox {
     background-color: #30C095;
